--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "start-storybook -c .storybook -s ./ -p 9001",
     "build": "rm -rf ./dist && gulp dist",
-    "scaffold-component": "lerna exec --scope generator-component-library scaffold-component",
+    "scaffold": "lerna exec --scope generator-component-library scaffold-component",
     "test": "jest"
   },
   "private": true,
@@ -73,5 +73,8 @@
   },
   "files": [
     "dist"
+  ],
+  "browserslist": [
+    "> 1%", "last 4 versions"
   ]
 }
